manipuler les sections

--- a/catalogue.html
+++ b/catalogue.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Capsules du CAPP - Méthodes quantitatives en science politique</title>
+    <title>Catalogue de capsules | Capsules du CAPP</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
     <link rel="stylesheet" href="assets/styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -22,7 +22,7 @@
             alt="Logo de l'organisation"
             class="h-12 w-12 rounded-full border-2 border-white"
           />
-          <h1 class="text-2xl font-bold">Capsules du CAPP</h1>
+          <a href="index.html" class="text-2xl font-bold">Capsules du CAPP</a>
         </div>
         <div class="hidden md:flex space-x-8">
           <a href="index.html#hero" class="hover:text-secondary transition">Accueil</a>
@@ -36,31 +36,22 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
-    <header id="hero" class="bg-gradient-to-r from-primary to-blue-900 text-white py-20">
-      <div class="container mx-auto px-6 text-center">
-        <h1 class="text-4xl md:text-6xl font-bold mb-6">
-          Maîtrisez les méthodes quantitatives en science politique
+    <!-- Page Header -->
+    <header class="bg-gradient-to-r from-primary to-blue-900 text-white py-16">
+      <div class="container mx-auto px-6">
+        <h1 class="text-4xl md:text-5xl font-bold mb-4">
+          Catalogue de capsules
         </h1>
-        <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">
-          Des analyses basées sur les données pour comprendre les phénomènes politiques à travers l'analyse statistique et les méthodes de recherche.
+        <p class="text-xl text-gray-200">
+          Explorez toutes nos capsules sur les méthodes quantitatives en science politique
         </p>
-        <button
-          class="bg-white text-primary font-bold px-8 py-3 rounded-full hover:bg-secondary transition"
-        >
-          Commencer l'apprentissage
-        </button>
       </div>
     </header>
 
-    <!-- Tutorials Grid -->
-    <section id="capsules" class="container mx-auto px-6 py-16">
-      <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">
-        Capsules en vedette
-      </h2>
-
+    <!-- Catalog Section -->
+    <section class="container mx-auto px-6 py-16">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Tutorial Card 1 -->
+        <!-- Capsule Card 1 -->
         <a
           href="regression-analysis.html"
           class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition"
@@ -99,7 +90,7 @@
           </div>
         </a>
 
-        <!-- Tutorial Card 2 -->
+        <!-- Capsule Card 2 -->
         <a
           href="survey-methods.html"
           class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition"
@@ -138,7 +129,7 @@
           </div>
         </a>
 
-        <!-- Tutorial Card 3 -->
+        <!-- Capsule Card 3 -->
         <a
           href="time-series.html"
           class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition"
@@ -176,107 +167,9 @@
             </div>
           </div>
         </a>
-      </div>
-    </section>
 
-    <!-- Team Section -->
-    <section id="equipe" class="bg-secondary py-16">
-      <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">
-          Notre Équipe
-        </h2>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-          <!-- Team Member 1 -->
-          <a href="team/member-1.html" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition group">
-            <div class="aspect-square overflow-hidden">
-              <img
-                src="http://static.photos/people/400x400/1"
-                alt="Membre de l'équipe 1"
-                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
-              />
-            </div>
-            <div class="p-6 text-center">
-              <h3 class="font-bold text-xl mb-1">Nom du membre 1</h3>
-              <p class="text-gray-600 text-sm">Titre / Fonction</p>
-            </div>
-          </a>
-
-          <!-- Team Member 2 -->
-          <a href="team/member-2.html" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition group">
-            <div class="aspect-square overflow-hidden">
-              <img
-                src="http://static.photos/people/400x400/2"
-                alt="Membre de l'équipe 2"
-                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
-              />
-            </div>
-            <div class="p-6 text-center">
-              <h3 class="font-bold text-xl mb-1">Nom du membre 2</h3>
-              <p class="text-gray-600 text-sm">Titre / Fonction</p>
-            </div>
-          </a>
-
-          <!-- Team Member 3 -->
-          <a href="team/member-3.html" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition group">
-            <div class="aspect-square overflow-hidden">
-              <img
-                src="http://static.photos/people/400x400/3"
-                alt="Membre de l'équipe 3"
-                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
-              />
-            </div>
-            <div class="p-6 text-center">
-              <h3 class="font-bold text-xl mb-1">Nom du membre 3</h3>
-              <p class="text-gray-600 text-sm">Titre / Fonction</p>
-            </div>
-          </a>
-
-          <!-- Team Member 4 -->
-          <a href="team/member-4.html" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition group">
-            <div class="aspect-square overflow-hidden">
-              <img
-                src="http://static.photos/people/400x400/4"
-                alt="Membre de l'équipe 4"
-                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
-              />
-            </div>
-            <div class="p-6 text-center">
-              <h3 class="font-bold text-xl mb-1">Nom du membre 4</h3>
-              <p class="text-gray-600 text-sm">Titre / Fonction</p>
-            </div>
-          </a>
-
-          <!-- Team Member 5 -->
-          <a href="team/member-5.html" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition group">
-            <div class="aspect-square overflow-hidden">
-              <img
-                src="http://static.photos/people/400x400/5"
-                alt="Membre de l'équipe 5"
-                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
-              />
-            </div>
-            <div class="p-6 text-center">
-              <h3 class="font-bold text-xl mb-1">Nom du membre 5</h3>
-              <p class="text-gray-600 text-sm">Titre / Fonction</p>
-            </div>
-          </a>
-
-          <!-- Team Member 6 -->
-          <a href="team/member-6.html" class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition group">
-            <div class="aspect-square overflow-hidden">
-              <img
-                src="http://static.photos/people/400x400/6"
-                alt="Membre de l'équipe 6"
-                class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
-              />
-            </div>
-            <div class="p-6 text-center">
-              <h3 class="font-bold text-xl mb-1">Nom du membre 6</h3>
-              <p class="text-gray-600 text-sm">Titre / Fonction</p>
-            </div>
-          </a>
-        </div>
+        <!-- Placeholder for more capsules -->
+        <!-- Add more capsule cards here as they become available -->
       </div>
     </section>
 
