--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
         <div class="hidden md:flex space-x-8">
           <a href="index.html#hero" class="hover:text-secondary transition">Accueil</a>
-          <a href="catalogue.html" class="hover:text-secondary transition">Cours</a>
-          <a href="ressources.html" class="hover:text-secondary transition">Ressources</a>
+          <a href="index.html#capsules" class="hover:text-secondary transition">Cours</a>
+          <a href="index.html#ressources" class="hover:text-secondary transition">Ressources</a>
           <a href="index.html#equipe" class="hover:text-secondary transition">À propos</a>
         </div>
         <button class="md:hidden">
@@ -56,7 +56,7 @@
     <!-- Tutorials Grid -->
     <section id="capsules" class="container mx-auto px-6 py-16">
       <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">
-        Capsules en vedette
+        Nos capsules
       </h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -179,6 +179,284 @@
       </div>
     </section>
 
+    <!-- Resources Section -->
+    <section id="ressources" class="bg-gray-100 py-16">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center mb-12 text-gray-800">
+          Ressources pour apprendre
+        </h2>
+        <div class="space-y-12">
+          <!-- R Resources -->
+          <div class="bg-white rounded-xl shadow-lg p-8">
+            <div class="flex items-center mb-6">
+              <div class="w-16 h-16 bg-blue-600 rounded-lg flex items-center justify-center mr-4">
+                <i data-feather="bar-chart-2" class="text-white w-8 h-8"></i>
+              </div>
+              <div>
+                <h3 class="text-3xl font-bold text-gray-800">R</h3>
+                <p class="text-gray-600">Langage de programmation pour l'analyse statistique</p>
+              </div>
+            </div>
+            <p class="text-gray-700 mb-6">
+              R est un langage et un environnement pour le calcul statistique et la visualisation de données,
+              largement utilisé en science politique pour l'analyse quantitative.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <a href="https://cran.r-project.org/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="download" class="mr-3 text-blue-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Télécharger R</h4>
+                  <p class="text-sm text-gray-600">CRAN - The Comprehensive R Archive Network</p>
+                </div>
+              </a>
+              <a href="https://posit.co/download/rstudio-desktop/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="code" class="mr-3 text-blue-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">RStudio Desktop</h4>
+                  <p class="text-sm text-gray-600">IDE gratuit pour R</p>
+                </div>
+              </a>
+              <a href="https://r4ds.hadley.nz/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="book-open" class="mr-3 text-blue-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">R for Data Science</h4>
+                  <p class="text-sm text-gray-600">Livre gratuit par Hadley Wickham & Garrett Grolemund</p>
+                </div>
+              </a>
+              <a href="https://www.tidyverse.org/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="package" class="mr-3 text-blue-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Tidyverse</h4>
+                  <p class="text-sm text-gray-600">Collection de packages R pour la science des données</p>
+                </div>
+              </a>
+              <a href="https://www.rstudio.com/resources/cheatsheets/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="file-text" class="mr-3 text-blue-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Cheat Sheets</h4>
+                  <p class="text-sm text-gray-600">Aide-mémoires pour les packages R populaires</p>
+                </div>
+              </a>
+              <a href="https://www.datacamp.com/courses/free-introduction-to-r" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="play-circle" class="mr-3 text-blue-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Introduction à R (DataCamp)</h4>
+                  <p class="text-sm text-gray-600">Cours interactif gratuit pour débutants</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- Zotero Resources -->
+          <div class="bg-white rounded-xl shadow-lg p-8">
+            <div class="flex items-center mb-6">
+              <div class="w-16 h-16 bg-red-600 rounded-lg flex items-center justify-center mr-4">
+                <i data-feather="bookmark" class="text-white w-8 h-8"></i>
+              </div>
+              <div>
+                <h3 class="text-3xl font-bold text-gray-800">Zotero</h3>
+                <p class="text-gray-600">Gestionnaire de références bibliographiques</p>
+              </div>
+            </div>
+            <p class="text-gray-700 mb-6">
+              Zotero est un outil gratuit et open source pour gérer vos références bibliographiques,
+              organiser vos sources et générer des citations et bibliographies automatiquement.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <a href="https://www.zotero.org/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="download" class="mr-3 text-red-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Télécharger Zotero</h4>
+                  <p class="text-sm text-gray-600">Site officiel - gratuit pour Windows, Mac et Linux</p>
+                </div>
+              </a>
+              <a href="https://www.zotero.org/support/quick_start_guide" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="zap" class="mr-3 text-red-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Guide de démarrage rapide</h4>
+                  <p class="text-sm text-gray-600">Documentation officielle pour commencer</p>
+                </div>
+              </a>
+              <a href="https://www.zotero.org/support/plugins" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="puzzle" class="mr-3 text-red-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Plugins Zotero</h4>
+                  <p class="text-sm text-gray-600">Extensions pour améliorer Zotero</p>
+                </div>
+              </a>
+              <a href="https://www.zotero.org/support/word_processor_integration" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="edit" class="mr-3 text-red-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Intégration Word/LibreOffice</h4>
+                  <p class="text-sm text-gray-600">Insérer des citations dans vos documents</p>
+                </div>
+              </a>
+              <a href="https://www.zotero.org/styles" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="list" class="mr-3 text-red-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Styles de citation</h4>
+                  <p class="text-sm text-gray-600">Plus de 10,000 styles bibliographiques (APA, MLA, Chicago, etc.)</p>
+                </div>
+              </a>
+              <a href="https://www.zotero.org/groups/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="users" class="mr-3 text-red-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Groupes Zotero</h4>
+                  <p class="text-sm text-gray-600">Collaborer et partager des bibliothèques</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- LaTeX Resources -->
+          <div class="bg-white rounded-xl shadow-lg p-8">
+            <div class="flex items-center mb-6">
+              <div class="w-16 h-16 bg-green-600 rounded-lg flex items-center justify-center mr-4">
+                <i data-feather="file-text" class="text-white w-8 h-8"></i>
+              </div>
+              <div>
+                <h3 class="text-3xl font-bold text-gray-800">LaTeX</h3>
+                <p class="text-gray-600">Système de composition de documents scientifiques</p>
+              </div>
+            </div>
+            <p class="text-gray-700 mb-6">
+              LaTeX est un système de composition de haute qualité, particulièrement adapté pour
+              la production de documents scientifiques et techniques contenant des formules mathématiques complexes.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <a href="https://www.overleaf.com/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="edit-3" class="mr-3 text-green-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Overleaf</h4>
+                  <p class="text-sm text-gray-600">Éditeur LaTeX en ligne collaboratif gratuit</p>
+                </div>
+              </a>
+              <a href="https://www.latex-project.org/get/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="download" class="mr-3 text-green-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Installer LaTeX</h4>
+                  <p class="text-sm text-gray-600">Distributions TeX pour votre système d'exploitation</p>
+                </div>
+              </a>
+              <a href="https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="clock" class="mr-3 text-green-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Apprendre LaTeX en 30 minutes</h4>
+                  <p class="text-sm text-gray-600">Tutoriel rapide pour débutants</p>
+                </div>
+              </a>
+              <a href="https://www.overleaf.com/latex/templates" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="layout" class="mr-3 text-green-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Templates LaTeX</h4>
+                  <p class="text-sm text-gray-600">Modèles gratuits pour articles, thèses, présentations</p>
+                </div>
+              </a>
+              <a href="https://www.ctan.org/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="archive" class="mr-3 text-green-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">CTAN</h4>
+                  <p class="text-sm text-gray-600">Archive complète de packages LaTeX</p>
+                </div>
+              </a>
+              <a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="book" class="mr-3 text-green-600 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">LaTeX Wikibook</h4>
+                  <p class="text-sm text-gray-600">Guide complet et gratuit sur LaTeX</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <!-- Git & GitHub Resources -->
+          <div class="bg-white rounded-xl shadow-lg p-8">
+            <div class="flex items-center mb-6">
+              <div class="w-16 h-16 bg-gray-800 rounded-lg flex items-center justify-center mr-4">
+                <i data-feather="git-branch" class="text-white w-8 h-8"></i>
+              </div>
+              <div>
+                <h3 class="text-3xl font-bold text-gray-800">Git & GitHub</h3>
+                <p class="text-gray-600">Contrôle de version et collaboration de code</p>
+              </div>
+            </div>
+            <p class="text-gray-700 mb-6">
+              Git est un système de contrôle de version distribué permettant de suivre les modifications
+              de vos projets. GitHub est une plateforme web qui facilite la collaboration et le partage de code.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <a href="https://git-scm.com/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="download" class="mr-3 text-gray-800 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Télécharger Git</h4>
+                  <p class="text-sm text-gray-600">Site officiel de Git</p>
+                </div>
+              </a>
+              <a href="https://github.com/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="github" class="mr-3 text-gray-800 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">GitHub</h4>
+                  <p class="text-sm text-gray-600">Créer un compte gratuit sur GitHub</p>
+                </div>
+              </a>
+              <a href="https://git-scm.com/book/fr/v2" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="book-open" class="mr-3 text-gray-800 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Pro Git (Français)</h4>
+                  <p class="text-sm text-gray-600">Livre complet et gratuit sur Git</p>
+                </div>
+              </a>
+              <a href="https://docs.github.com/fr/get-started/quickstart" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="zap" class="mr-3 text-gray-800 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Guide de démarrage GitHub</h4>
+                  <p class="text-sm text-gray-600">Documentation officielle en français</p>
+                </div>
+              </a>
+              <a href="https://learngitbranching.js.org/?locale=fr_FR" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="play-circle" class="mr-3 text-gray-800 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">Learn Git Branching</h4>
+                  <p class="text-sm text-gray-600">Tutoriel interactif pour apprendre Git</p>
+                </div>
+              </a>
+              <a href="https://desktop.github.com/" target="_blank"
+                 class="flex items-start p-4 border border-gray-200 rounded-lg hover:shadow-md transition">
+                <i data-feather="monitor" class="mr-3 text-gray-800 flex-shrink-0"></i>
+                <div>
+                  <h4 class="font-bold">GitHub Desktop</h4>
+                  <p class="text-sm text-gray-600">Interface graphique pour Git (Windows & Mac)</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Team Section -->
     <section id="equipe" class="bg-secondary py-16">
       <div class="container mx-auto px-6">
@@ -295,16 +573,16 @@
             </p>
           </div>
           <div>
-            <h4 class="font-bold text-lg mb-4">Ressources</h4>
+            <h4 class="font-bold text-lg mb-4">Navigation</h4>
             <ul class="space-y-2">
               <li>
-                <a href="ressources.html" class="text-gray-300 hover:text-white transition"
-                  >Guides et outils</a
+                <a href="index.html#capsules" class="text-gray-300 hover:text-white transition"
+                  >Nos capsules</a
                 >
               </li>
               <li>
-                <a href="catalogue.html" class="text-gray-300 hover:text-white transition"
-                  >Catalogue de capsules</a
+                <a href="index.html#ressources" class="text-gray-300 hover:text-white transition"
+                  >Ressources</a
                 >
               </li>
               <li>
