--- a/diapos_intro_r/pres.html
+++ b/diapos_intro_r/pres.html
@@ -141,6 +141,15 @@ Laurence-Olivier M. Foisy
 
   <p class="date">2025-10-15</p>
 </section>
+<section id="objectifs-de-la-capsule" class="slide level2">
+<h2>Objectifs de la capsule</h2>
+<ul>
+<li>Introduire le langage R</li>
+<li>Comprendre les avantages de R</li>
+<li>Installer R et Positron</li>
+<li>Introduire l’environnement Positron</li>
+</ul>
+</section>
 <section id="les-logiciels-danalyse-de-données" class="slide level2 smaller">
 <h2>Les logiciels d’analyse de données</h2>
 <p><img data-src="https://capsules-metho.github.io/diapos_intro_r/img/spss_logo.svg" class="absolute" style="top: 340px; left: 100px; width: 20%; "></p>
@@ -149,7 +158,7 @@ Laurence-Olivier M. Foisy
 <p><img data-src="https://capsules-metho.github.io/diapos_intro_r/img/julia_logo.png" class="absolute" style="top: 100px; left: 100px; width: 20%; "></p>
 <p><img data-src="https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png" class="absolute" style="top: 200px; left: 330px; width: 40%; "></p>
 </section>
-<section id="pourquoi-r" class="slide level2 smaller">
+<section id="pourquoi-r" class="slide level2">
 <h2>Pourquoi R?</h2>
 <p><img data-src="https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png" class="absolute" style="top: 0px; left: 800px; width: 20%; "></p>
 <p><br><br></p>
@@ -157,15 +166,11 @@ Laurence-Olivier M. Foisy
 <ul>
 <li>Gratuit</li>
 <li>Collaboratif</li>
-<li>Communauté active
-<ul>
-<li>Stackoverflow</li>
-<li>r-bloggers</li>
-</ul></li>
+<li>Communauté active</li>
 <li>Adapté aux besoins des utilisateurs</li>
 </ul>
 </section>
-<section id="pourquoi-r-1" class="slide level2 smaller">
+<section id="pourquoi-r-1" class="slide level2">
 <h2>Pourquoi R?</h2>
 <p><img data-src="https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png" class="absolute" style="top: 0px; left: 800px; width: 20%; "></p>
 <p><br><br></p>
@@ -173,32 +178,20 @@ Laurence-Olivier M. Foisy
 <ul>
 <li>Offre une extension des fonctionnalités de base presque infinie</li>
 <li>Peux répondre à des besoins très spécifiques</li>
-<li>21,744 packages sur CRAN (Comprehensive R Archive Network)
-<ul>
-<li>Principal dépôt où sont hébergés les packages R</li>
-</ul></li>
-<li>Beaucoup plus sur GitHub
-<ul>
-<li>En plus de CRAN, de nombreux chercheurs publient leurs packages sur GitHub, une plateforme de partage de code</li>
-</ul></li>
+<li>Plus de 22,000 packages sur CRAN (Comprehensive R Archive Network)</li>
+<li>Beaucoup plus sur GitHub</li>
 </ul>
 </section>
-<section id="pourquoi-r-2" class="slide level2 smaller">
+<section id="pourquoi-r-2" class="slide level2">
 <h2>Pourquoi R?</h2>
 <p><img data-src="https://capsules-metho.github.io/diapos_intro_r/img/r_logo.png" class="absolute" style="top: 0px; left: 800px; width: 20%; "></p>
 <p><br><br></p>
 <h3 id="reproductibilité">Reproductibilité</h3>
 <ul>
 <li>Rendre les analyses reproductibles</li>
-<li>Permet de partager les analyses
-<ul>
-<li>Les scripts R permettent de partager facilement le travail</li>
-</ul></li>
+<li>Permet de partager le code</li>
+<li>Facilite la transparence et la collaboration</li>
 <li>Permet de retracer les erreurs</li>
-<li>Partager le code
-<ul>
-<li>Encourage la transparence et la collaboration dans la recherche</li>
-</ul></li>
 </ul>
 </section>
 <section id="pourquoi-r-3" class="slide level2 smaller">
@@ -210,42 +203,75 @@ Laurence-Olivier M. Foisy
 <li>Beaucoup de ressources</li>
 <li>Beaucoup de tutoriels orientés vers les sciences sociales
 <ul>
+<li>Swirl</li>
 <li>Datacamp</li>
-<li>Coursera</li>
-<li>Datanovia</li>
+<li>Codecademy</li>
+<li>EdX</li>
 </ul></li>
 </ul>
-<h4 id="bref-important-dutiliser-les-mêmes-outils-que-les-chercheurs-dans-votre-domaine">Bref… important d’utiliser les mêmes outils que les chercheurs dans votre domaine</h4>
+<h4 id="important-dutiliser-les-mêmes-outils-que-les-chercheurs-dans-votre-domaine">Important d’utiliser les mêmes outils que les chercheurs dans votre domaine</h4>
 </section>
-<section id="installer-r-et-rstudio" class="slide level2 smaller">
-<h2>Installer R et RStudio</h2>
+<section id="datagotchi" class="slide level2 smaller">
+<h2>Datagotchi</h2>
+<p><img data-src="img/datagotchi_usa.png" class="absolute" style="top: 0px; left: 850px; width: 30%; "></p>
 <ul>
-<li>C’est quoi la différence entre R et RStudio?</li>
-<li>R est le moteur, RStudio est l’interface</li>
-<li>RStudio facilite l’utilisation de R</li>
-<li>RStudio est un IDE (Integrated Development Environment)</li>
+<li>Application utilisant des variables lifestyles pour prédire le vote</li>
+<li>Utiliser R et l’analyse de données à travers ce projet:
+<ul>
+<li>Prototypage en Shiny</li>
+<li>Nettoyage des données</li>
+<li>Analyse factorielle</li>
+<li>Régressions et modèles</li>
+<li>Visualisation</li>
+</ul></li>
+</ul>
+</section>
+<section id="section" class="slide level2">
+<h2></h2>
+<p><img data-src="img/datagotchi_graph.png" class="absolute" style="top: 0px; left: 0px; width: 200%; "></p>
+<div class="r-stack">
+<p><img data-src="img/cartogram.png" class="fragment absolute" style="top: 0px; left: 0px; width: 200%; "></p>
+<p><img data-src="img/turnout.png" class="fragment absolute" style="top: 0px; left: 0px; width: 200%; "></p>
+</div>
+</section>
+<section id="analyse-textuelle" class="slide level2 smaller">
+<h2>Analyse textuelle</h2>
+<ul>
+<li>Analyse de ton
+<ul>
+<li>Est-ce que le texte est positif ou négatif?</li>
+</ul></li>
+</ul>
+<p><img data-src="img/time_series_by_article.png" class="absolute" style="top: 200px; left: 70px; width: 80%; "></p>
+</section>
+<section id="au-delà-de-lanalyse-de-données" class="slide level2 smaller">
+<h2>Au-delà de l’analyse de données</h2>
+<ul>
+<li>R ne se limite pas à l’analyse statistique, il peut aussi être utilisé pour développer des applications web interactives</li>
+</ul>
+<p><img data-src="img/catalogue.png">{absolute top=0 left=0 width=“20%”}</p>
+</section>
+<section id="mais-derrière-tout-ça-r" class="slide level2 smaller">
+<h2>Mais derrière tout ça… R</h2>
+<ul>
+<li>Voici l’envers du décor :</li>
+</ul>
+<p><img data-src="img/catalogue_code.png">{absolute top=0 left=0 width=“20%”}</p>
+</section>
+<section id="installer-r-et-positron" class="slide level2 smaller">
+<h2>Installer R et Positron</h2>
+<ul>
+<li>R est le langage de programmation</li>
+<li>Positron est l’interface</li>
+<li>Positron offre plein d’outils pour faciliter l’utilisation de R</li>
+<li>RStudio est un IDE parmis tant d’autres</li>
 </ul>
 <p><br><br></p>
 <h3 id="à-télécharger">À télécharger :</h3>
 <ul>
 <li><a href="https://cran.r-project.org/">Installer R</a></li>
-<li><a href="https://www.rstudio.com/products/rstudio/download/">Installer RStudio</a></li>
+<li><a href="https://positron.posit.co/">Installer Positron</a></li>
 </ul>
-</section>
-<section id="section" class="slide level2" data-background-image="https://capsules-metho.github.io/diapos_intro_r/img/rstudio.png">
-<h2></h2>
-</section>
-<section id="section-1" class="slide level2" data-background-image="https://capsules-metho.github.io/diapos_intro_r/img/rstudio_script.png">
-<h2></h2>
-</section>
-<section id="section-2" class="slide level2" data-background-image="https://capsules-metho.github.io/diapos_intro_r/img/rstudio_console.png">
-<h2></h2>
-</section>
-<section id="section-3" class="slide level2" data-background-image="https://capsules-metho.github.io/diapos_intro_r/img/rstudio_files.png">
-<h2></h2>
-</section>
-<section id="section-4" class="slide level2" data-background-image="https://capsules-metho.github.io/diapos_intro_r/img/rstudio_env.png">
-<h2></h2>
 </section>
 <section id="concept-important-le-chemin-darborescence" class="slide level2 smaller">
 <h2>Concept important : Le chemin d’arborescence</h2>
@@ -284,6 +310,14 @@ Laurence-Olivier M. Foisy
 </ul></li>
 <li>Chaque script doit être clair et facile à comprendre</li>
 <li>Commenter votre code avec des <code>#</code></li>
+</ul>
+</section>
+<section id="dans-la-prochaine-capsule" class="slide level2">
+<h2>Dans la prochaine capsule</h2>
+<ul>
+<li>Importer des données dans R</li>
+<li>Nettoyer des données</li>
+<li>Faire des graphiques simples</li>
 </ul>
 
 </section>
